--- a/src/main/resources/templates/trainPosition.html
+++ b/src/main/resources/templates/trainPosition.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
 		<meta charset="UTF-8">
@@ -25,7 +25,12 @@
 		<link href="../build/css/custom.min.css" rel="stylesheet">
 					<!-- Bootstrap -->
     <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+		<style type="text/css">
+			#yincang{
+				width: 90px;height: 30px;margin:0 auto;float: right;
 
+			}
+		</style>
 	</head>
 
 	<body>
@@ -35,73 +40,86 @@
 					
 					<div class="x_content">
 
-						<form class="form-horizontal form-label-left" novalidate="">
+						<form id="demo-form2" th:action="@{/trainPosition}" method="post" class="form-horizontal form-label-left" novalidate="">
 
 							
 							<span class="section"></span>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="number">职位编码 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >职位编码 <span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<input type="number" id="number" name="number" required="required" data-validate-minmax="10,100" class="form-control col-md-7 col-xs-12">
-								</div>
+									<input    id="posCode" type="text" name="posCode" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+
+								</div><span id="err1" style="color: red">请输入！</span>
 							</div>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">职位名称<span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >职位名称<span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<input id="name" class="form-control col-md-7 col-xs-12" data-validate-length-range="6" data-validate-words="2" name="name" placeholder="请输入用户名称" required="required" type="text">
-								</div>
+									<input id="posName" class="form-control col-md-7 col-xs-12" data-validate-length-range="6" data-validate-words="2" name="posName" placeholder="请输入用户名称" required="required" type="text">
+								</div><span id="err2" style="color: red">请输入！</span>
 							</div>
 							<div class="form-group">
 								<label class="control-label col-md-3 col-sm-3 col-xs-12">职位分类</label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<select class="form-control">
+									<select class="form-control" name="posClass">
 
-										<option selected="" value="---请选择---">---请选择---</option>
-										<option value="管理">管理</option>
-										<option value="技术">技术</option>
-										<option value="实施">实施</option>
-										<option value="测试">测试</option>
-										<option value="售前">售前</option>
-										<option value="财务">财务</option>
-										<option value="行政">行政</option>
+										<option th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==posClass" th:text="${dictionary.dataName}" th:value="${dictionary.id}" >-- 请选择 --
+
+
+										</option>
 									</select>
 
-								</div>
+								</div><span id="err3" style="color: red">请选择！</span>
 							</div>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="occupation">所属部门 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >所属部门 <span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<input id="occupation" type="text" name="occupation" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
-								</div>
+									<input   readonly="readonly" id="depName" type="text" name="depName" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+									<input type="hidden"  id="depId" name="depId">
+								</div><i  id="myBT"  class="fa fa-search-plus"></i>
+								<div id="yincang" >
+									<ul  >
+
+										<li th:each="department:${departmentList}">
+											<span th:text="${department.depName}"  th:id="${department.id}"></span>
+										</li>
+									</ul>
+
+
+
+								</div ><span id="err4" style="color: red">请选择！</span>
 							</div>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="textarea">职位描述 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >职位描述 <span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<textarea id="textarea" required="required" name="textarea" class="form-control col-md-7 col-xs-12"></textarea>
-								</div>
+									<textarea id="introduction" required="required" name="introduction" class="form-control col-md-7 col-xs-12"></textarea>
+								</div><span id="err5" style="color: red">请输入！</span>
 							</div>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="textarea">备注 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >备注 <span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<textarea id="textarea" required="required" name="textarea" class="form-control col-md-7 col-xs-12"></textarea>
-								</div>
+									<textarea id="remark" required="required" name="remark" class="form-control col-md-7 col-xs-12"></textarea>
+								</div><span id="err6" style="color: red">请输入！</span>
 							</div>
 							<div class="form-group">
-<label class="control-label col-md-3 col-sm-3 col-xs-12" for="textarea">是否启用 <span class="required">*</span>
+<label class="control-label col-md-3 col-sm-3 col-xs-12" >是否启用 <span class="required">*</span>
                         		</label>
-							<input type="checkbox" class="flat" name="table_records" style="position: absolute; opacity: 0;">
-										 Checked
+								<div class="col-md-6 col-sm-6 col-xs-12">
+								<select  class="form-control" name="enable">
+								<option th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==enable" th:text="${dictionary.dataName}" th:value="${dictionary.id}" >-- 请选择 --
 
+
+								</option>
+								</select>
                           </div>
                           <div class="form-group ">
                         <div class="col-md-6 col-md-offset-3 ">
-                        	<button id="send " type="submit " class="btn btn-success ">保存</button>
-                          <button type="submit " class="btn btn-primary ">返回</button>
+                        	<button id="send" type="submit " class="btn btn-success " disabled>保存</button>
+							<a th:href="@{zhiweiguanli}">               <input type="button " value="返回" class="btn btn-primary "></input></a>
                           
                         </div>
                       </div>
@@ -146,7 +164,95 @@
 
     <!-- Custom Theme Scripts -->
     <script src="../build/js/custom.min.js "></script>
+				<script type="text/javascript">
+					$(document).ready(function () {
+						$('#err1').hide();$('#err2').hide();$('#err3').hide();$('#err4').hide();$('#err5').hide();$('#err6').hide();
+						$("#demo-form2 input:text").blur(function () {
+							var txtval=$(this).val();
+							if(txtval==null ||txtval=='' )
+							{
+								$(this).parent().next("span").show();
 
+							}else
+							{
+								$(this).parent().next("span").hide();
+							}
+
+
+						});
+						$("#demo-form2 textarea ").blur(function () {
+							var thtext=$(this).val();
+
+							if(thtext==null ||thtext=='' )
+							{
+								$(this).parent().next("span").show();
+
+							}else
+							{
+								$(this).parent().next("span").hide();
+
+							}
+						})
+
+
+
+
+//职位编码判断
+						$("#posCode").blur(function () {
+
+							var name=$(this).val();
+
+							$.post("codePos",{'uname':name},function (data) {
+
+
+
+								if(data==null || data==""){
+
+									$("#send").removeAttr("disabled");
+
+								}else {
+
+
+									$("#send").attr("disabled").disabled;
+								}
+
+
+							},"html");
+
+						})
+
+
+
+						$("#fanhui").click(function () {
+							window.history.back();
+						})
+						//获取所属部门
+						$("#yincang").hide();
+						$("#yincang  span").click(function () {
+							var id=$(this).attr("id");
+							var depname=$(this).text();
+							$("#depId").val(id);
+							$("#depName").val(depname);
+
+						})
+
+
+						//点击显示和隐藏
+						$("#myBT").click(function () {
+							var o=$("#yincang");
+							if(o.css("display")!="none"){
+								o.hide();
+								$(this).html("");
+							}else {
+								o.show();
+								$(this).html("");
+							}
+						})
+					})
+
+
+
+				</script>
     <!-- validator -->
     <script>
       // initialize the validator function
