--- a/src/main/resources/templates/trainUser.html
+++ b/src/main/resources/templates/trainUser.html
@@ -30,29 +30,29 @@
                  
                   <div class="x_content">
 
-                    <form class="form-horizontal form-label-left" novalidate="" th:action="@{/trainUser}" method="post">
+                    <form id="aabb" class="form-horizontal form-label-left" novalidate="" th:action="@{/trainUser}" method="post">
 
                       
                       <span class="section"></span>
 					  <div class="item form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="number" >用户编码 <span class="required">*</span>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12"  >用户编码 <span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12" >
-                          <input type="text" id="number" name="userCode" required="required" data-validate-minmax="10,100" class="form-control col-md-7 col-xs-12">
-                        </div>
+                          <input type="text" id="userCode" name="userCode" required="required" data-validate-minmax="10,100" class="form-control col-md-7 col-xs-12">
+                        </div><span id="err1" style="color: red">请输入！</span>
                       </div>
                       <div class="item form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">用户名称<span class="required">*</span>
                         </label>
-                        <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input id="name" class="form-control col-md-7 col-xs-12" data-validate-length-range="6" data-validate-words="2" name="userName"  required="required" type="text">
-                        </div>
+                        <div id="chuanname" class="col-md-6 col-sm-6 col-xs-12">
+                          <input  id="name" class="form-control col-md-7 col-xs-12" data-validate-length-range="6" data-validate-words="2" name="userName"  required="required" type="text">
+                        </div><span id="err2" style="color: red">请输入！</span>
                       </div>
                       <div class="item form-group">
                         <label for="password" class="control-label col-md-3">密码</label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input id="password" type="password" name="password" data-validate-length="6,8" class="form-control col-md-7 col-xs-12" required="required">
-                        </div>
+                          <input id="password" readonly type="text" value="123456" name="password" data-validate-length="6,8" class="form-control col-md-7 col-xs-12" required="required">
+                        </div><span id="err3" style="color: red">请输入！</span>
                       </div>
                       <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12">用户角色</label>
@@ -87,20 +87,20 @@
 
 
 
-                      </div >
+                      </div ><span id="err4" style="color: red">请输入！</span>
                       </div>
                       <div class="item form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="telephone">联系电话<span class="required">*</span>
                         </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                           <input type="number" id="telephone" name="phoneNumber" required="required" data-validate-length-range="8,20" class="form-control col-md-7 col-xs-12">
-                        </div>
+                        </div><span id="err5" style="color: red">请输入！</span>
                       </div>
                       
                       <div class="form-group">
                         <div class="col-md-6 col-md-offset-3">
-                        	<button id="send" type="submit" class="btn btn-success" >添加</button>
-                                  <button type="submit" class="btn btn-primary">返回</button>
+                        	<button id="tijiao" type="submit" class="btn btn-success"  disabled =disabled>添加</button>
+                                  <button id="fanhui" type="button" class="btn btn-primary">返回</button>
                           
                         </div>
                       </div>
@@ -124,9 +124,114 @@
     <script src="../build/js/custom.min.js"></script>
 
     <script type="text/javascript">
+
 $(document).ready(function () {
+    $('#err1').hide();$('#err2').hide();$('#err3').hide();$('#err4').hide();$('#err5').hide();
+    //失去焦点验证
+    $("#aabb input:text").blur(function () {
+
+
+        var txtval=$(this).val();
+
+        if(txtval==null ||txtval=='' )
+        {
+
+            $(this).parent().next("span").show();
+        }else
+        {
+            $(this).parent().next("span").hide();
+        }
+
+
+    });
+    $("#aabb input:password").blur(function () {
+
+
+        var txtval=$(this).val();
+
+        if(txtval==null ||txtval=='' )
+        {
+
+            $(this).parent().next("span").show();
+        }else
+        {
+            $(this).parent().next("span").hide();
+        }
+
+
+    });
+    $("#aabb input[type='number']").blur(function () {
+
+
+        var txtval=$(this).val();
+
+        if(txtval==null ||txtval=='' )
+        {
+
+            $(this).parent().next("span").show();
+        }else
+        {
+            $(this).parent().next("span").hide();
+        }
+
+
+    });
+
+//返回
+    $("#fanhui").click(function () {
+        window.history.back();
+    })
+
+//名称判断
+    $("#name").blur(function () {
+
+        var name=$(this).val();
+
+        $.post("nameuser",{'uname':name},function (data) {
+
+            var rel=data;
+
+            if(rel==null || rel==""){
+                alert("请输入档案有的名字")
+               $("#tijiao").attr("disabled").disabled;
+
+            }else {
+              //  alert(11)
+                //用户编码
+                $("#userCode").blur(function () {
+
+                    var codes=$(this).val();
+                   // alert(22)
+                    $.post("nameCode",{'codename':codes},function (data) {
+
+                        var rel=data;
+
+                        if(rel==null || rel==""){
+                            $("#tijiao").removeAttr("disabled");
+
+                        }else {
+                            alert("用户编码存在")
+                            $("#tijiao").attr("disabled").disabled;
+                        }
+
+
+                    },"html");
+
+               })
+           //   $("#tijiao").removeAttr("disabled");
+            }
+
+
+        },"html");
+
+    })
+
+
+
+
 
     //获取所属部门
+    $("#yincang").hide();
     $("#yincang  span").click(function () {
         var id=$(this).attr("id");
         var depname=$(this).text();
