--- a/src/main/resources/templates/zhichengmingxi.html
+++ b/src/main/resources/templates/zhichengmingxi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
 		<meta charset="UTF-8">
@@ -35,79 +35,72 @@
 					
 					<div class="x_content">
 
-						<form class="form-horizontal form-label-left" novalidate="">
+						<form  th:action="@{/zhiweiguanli}"  class="form-horizontal form-label-left" novalidate="">
 
 							
 							<span class="section"></span>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="number">职位编码 <span class="required">*</span>
-                        </label>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >职称编码<span class="required">*</span>
+								</label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<input type="number" id="number" name="number" required="required" data-validate-minmax="10,100" class="form-control col-md-7 col-xs-12">
-								</div>
-							</div>
-							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">职称名称<span class="required">*</span>
-                        </label>
-								<div class="col-md-6 col-sm-6 col-xs-12">
-									<input id="name" class="form-control col-md-7 col-xs-12" data-validate-length-range="6" data-validate-words="2" name="name" placeholder="请输入用户名称" required="required" type="text">
-								</div>
-							</div>
-							<div class="form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12">职称分类</label>
-								<div class="col-md-6 col-sm-6 col-xs-12">
-									<select class="form-control">
-
-										<option selected="" value="---请选择---">---请选择---</option>
-										<option value="管理">管理</option>
-										<option value="技术">技术</option>
-										<option value="实施">实施</option>
-										<option value="测试">测试</option>
-										<option value="售前">售前</option>
-										<option value="财务">财务</option>
-										<option value="行政">行政</option>
-									</select>
+									<input readonly="readonly" th:value="${title.titleCode}"   id="titleCode" type="text" name="titleCode" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
 
 								</div>
 							</div>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="occupation">所属部门 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >职称名称<span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<input id="occupation" type="text" name="occupation" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
-								</div><i class="fa fa-search-plus"></i>
+									<input readonly="readonly" th:value="${title.titleName}"   id="titleName" type="text" name="titleName" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+
+								</div>
 							</div>
+
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="textarea">职称描述 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >所属部门 <span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<textarea id="textarea" required="required" name="textarea" class="form-control col-md-7 col-xs-12"></textarea>
+									<input readonly="readonly" th:value="${title.depName}"   id="depId" type="text" name="depId" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+
 								</div>
 							</div>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="textarea">备注 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >职称描述 <span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<textarea id="textarea" required="required" name="textarea" class="form-control col-md-7 col-xs-12"></textarea>
+									<input readonly="readonly" th:value="${title.introduction}"   id="introduction" type="text" name="introduction" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+
+								</div>
+							</div>
+							<div class="item form-group">
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >备注 <span class="required">*</span>
+                        </label>
+								<div class="col-md-6 col-sm-6 col-xs-12">
+									<input  readonly="readonly" th:value="${title.remark}"   id="remark" type="text" name="remark" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="textarea">是否启用 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >是否启用 <span class="required">*</span>
                         		</label>
-							<input type="checkbox" class="flat" name="table_records" style="position: absolute; opacity: 0;">
-										 Checked
+								<div class="col-md-6 col-sm-6 col-xs-12">
+									<input readonly="readonly" th:value="${title.dataName}"   id="enable" type="text" name="enable" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+
+								</div>
 
                           </div>
                           <div class="form-group ">
                         <div class="col-md-6 col-md-offset-3 ">
                         	
-                          <button type="submit " class="btn btn-primary ">返回</button>
+                          <input id="fanhui" type="button " value="返回" class="btn btn-success "></input>
                           
                         </div>
                       </div>
+						</form>
                         </div>
+
                       </div>
-                      
+			</div></div>
                       
                       
                       
@@ -148,7 +141,13 @@
 
     <!-- Custom Theme Scripts -->
     <script src="../build/js/custom.min.js "></script>
-
+				<script type="text/javascript">
+					$(document).ready(function () {
+						$("#fanhui").click(function () {
+							window.history.back();
+						})
+					})
+								</script>
     <!-- validator -->
     <script>
       // initialize the validator function
@@ -201,9 +200,7 @@
               'Times New Roman', 'Verdana'
             ],
             fontTarget = $('[title=Font]').siblings('.dropdown-menu');
-          $.each(fonts, function(idx, fontName) {
-            fontTarget.append($('<li><a data-edit="fontName ' + fontName + ' " style="font-family:\ '' + fontName + '\' ">' + fontName + '</a></li>'));
-          });
+
           $('a[title]').tooltip({
             container: 'body'
           });
