--- a/src/main/resources/templates/zhiweiguanlimingxi.html
+++ b/src/main/resources/templates/zhiweiguanlimingxi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
 		<meta charset="UTF-8">
@@ -40,33 +40,25 @@
 							
 							<span class="section"></span>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="number">职位编码 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >职位编码 <span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<input type="number" id="number" name="number" required="required" data-validate-minmax="10,100" class="form-control col-md-7 col-xs-12">
+									<input readonly="readonly"  th:value="${position.posCode}"   id="posCode" type="text" name="posCode" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+
 								</div>
 							</div>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">职位名称<span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >职位名称<span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<input id="name" class="form-control col-md-7 col-xs-12" data-validate-length-range="6" data-validate-words="2" name="name" placeholder="请输入用户名称" required="required" type="text">
+									<input readonly="readonly" th:value="${position.posName}" id="a" class="form-control col-md-7 col-xs-12" data-validate-length-range="6" data-validate-words="2" name="name" placeholder="请输入用户名称" required="required" type="text">
 								</div>
 							</div>
 							<div class="form-group">
 								<label class="control-label col-md-3 col-sm-3 col-xs-12">职位分类</label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<select class="form-control">
+									<input readonly="readonly" th:value="${position.dicClass}" id="name" class="form-control col-md-7 col-xs-12" data-validate-length-range="6" data-validate-words="2" name="name" placeholder="请输入用户名称" required="required" type="text">
 
-										<option selected="" value="---请选择---">---请选择---</option>
-										<option value="管理">管理</option>
-										<option value="技术">技术</option>
-										<option value="实施">实施</option>
-										<option value="测试">测试</option>
-										<option value="售前">售前</option>
-										<option value="财务">财务</option>
-										<option value="行政">行政</option>
-									</select>
 
 								</div>
 							</div>
@@ -74,37 +66,37 @@
 								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="occupation">所属部门 <span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<input id="occupation" type="text" name="occupation" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+									<input readonly="readonly" th:value="${position.depName}"  type="text" name="occupation" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
 								</div>
 							</div>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="textarea">职位描述 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >职位描述 <span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<textarea id="textarea" required="required" name="textarea" class="form-control col-md-7 col-xs-12"></textarea>
+									<input readonly="readonly" th:value="${position.introduction}"  type="text" name="occupation" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
 								</div>
 							</div>
 							<div class="item form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="textarea">备注 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >备注 <span class="required">*</span>
                         </label>
 								<div class="col-md-6 col-sm-6 col-xs-12">
-									<textarea id="textarea" required="required" name="textarea" class="form-control col-md-7 col-xs-12"></textarea>
+									<input readonly="readonly" th:value="${position.remark}" id="occupation" type="text" name="occupation" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
 								</div>
 							</div>
 							<div class="form-group">
-								<label class="control-label col-md-3 col-sm-3 col-xs-12" for="textarea">是否启用 <span class="required">*</span>
+								<label class="control-label col-md-3 col-sm-3 col-xs-12" >是否启用 <span class="required">*</span>
                         		</label>
-							<input type="checkbox" class="flat" name="table_records" style="position: absolute; opacity: 0;">
-										 Checked
-
+								<div class="col-md-6 col-sm-6 col-xs-12">
+								<input readonly="readonly" th:value="${position.dataName}" id="" type="text" name="occupation" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+								</div>
                           </div>
                           
                       <div class="form-group ">
                         <div class="col-md-6 col-md-offset-3 ">
                         	
-                          <button type="submit " class="btn btn-primary ">返回</button>
-                          
-                        </div>
+                  <a th:href="@{zhiweiguanli}">      <input id="fanhui" value="返回" type="button " class="btn btn-primary "></input></a>
+
+						</div>
                       </div>
 		
                         </div>
@@ -145,6 +137,14 @@
 
     <!-- Custom Theme Scripts -->
     <script src="../build/js/custom.min.js "></script>
+				<script type="text/javascript">
+					$(document).ready(function () {
+						$("#fanhui").click(function () {
+							window.history.back();
+						})
+					})
+				</script>
+
 
     <!-- validator -->
     <script>
